- code refactor & kotlin conversion